# tps-llm-lhf

./: .gitignore  COMMANDS.md  README.md  SUPPLEMENTARY.md  pyproject.toml
data/: raw data
data/prompts/: demo.txt
data/toy/ufb-lex_1_0/: toydata.jsonl
scripts/: Parsetest.py  analyse_las.py  analyse_tps.py  annotate_tps_with_etymology.py  build_wiktionary_etym_tsv.py  clean_generations_gpt.py  clean_generations_patterns.py  etym_marketshare_by_pos.py  generate_text.py  pos_tag.py  pos_tag2.py  pos_tag3.py  pos_tag3_setup.py  pos_tag_require.py  prep_human_abstracts.py
scripts/alpha-stage/: compute_freq.py  df_conllu.py  df_diff_base-instruct.py  generate_compare.py  get_first_parses.py  pos_tag_legacy.py  qc_doc_lengths_conllu.py  train_dpo.py  train_sft.py  verify_dpo.py
src/lhf_lex/infer/: generate.py  prompts.py
src/lhf_lex/io/: ufb_lex.py
src/lhf_lex/train/: dpo.py  sft.py  utils.py
src/lhf_lex/triangulate/: features.py  prevalence.py  stats.py
